@@ -1,3 +1,9 @@
+2010-04-20  Kenichi Handa  <handa@m17n.org>
+
+	* language/indian.el (oriya-composable-pattern)
+	(tamil-composable-pattern, malayalam-composable-pattern): Add
+	two-part vowels to "v" (vowel sign).
+
 2010-04-18  Chong Yidong  <cyd@stupidchicken.com>
 
 	* cedet/ede/pmake.el (ede-proj-makefile-insert-variables): Don't
